compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__multiple_bad_statement_assignment_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n  let a = 1 + 2.0\n  let b = 3 + 4.0\n  let c = a + b\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 1 + 2.0
  let b = 3 + 4.0
  let c = a + b
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:15
  │
3 │   let a = 1 + 2.0
  │               ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats


error: Type mismatch
  ┌─ /src/one/two.gleam:4:15
  │
4 │   let b = 3 + 4.0
  │               ^^^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
